Bug 170839 - Base Form: Form properties will show disabled creating, updating, deleting of record - won't allow to change any entry.
Summary: Base Form: Form properties will show disabled creating, updating, deleting of...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.2 target:26.2.1 target:26...
Keywords: bibisected, bisected, regression
: 171090 (view as bug list)
Depends on:
Blocks: Database-Forms
  Show dependency treegraph
 
Reported: 2026-02-16 22:40 UTC by ChuvpiloDmitriy
Modified: 2026-03-01 17:48 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Shows the buggy behavior after creating a form in LO 26.2.0.3 (35.07 KB, image/png)
2026-02-17 10:11 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ChuvpiloDmitriy 2026-02-16 22:40:04 UTC
Description:
When form properties "Allow Additions", "Allow modification", "Allow deletion" are disabled and have value = No. Dann form is read-only forever.

Steps to Reproduce:
Place Navigation Bar into a form.
In Navigation Bar properties chois "Positioning" = Hide
Click Save on form.
Close form.
Dann Open for to edit.
Chois table control in form properties.
"Allow Additions", "Allow modification", "Allow deletion" -- NO and Disabled

Come back "Positioning" = Show in Navigation Bar does not return editable state of "Allow Additions", "Allow modification", "Allow deletion" on form!
Deleting Navigation Bar does not return editable state of "Allow Additions", "Allow modification", "Allow deletion" on form!

Now form is always read-only.

Actual Results:
form properties "Allow Additions", "Allow modification", "Allow deletion" are disabled after settings property Navigation Bar "Positioning" = Show

Expected Results:
form properties "Allow Additions", "Allow modification", "Allow deletion" are enabled after settings property Navigation Bar "Positioning" = Show


Reproducible: Always


User Profile Reset: No

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: OfficeDatabaseDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 Robert Großkopf 2026-02-17 10:11:48 UTC
Created attachment 205576 [details]
Shows the buggy behavior after creating a form in LO 26.2.0.3
Comment 2 Robert Großkopf 2026-02-17 10:16:28 UTC
Could confirm the buggy behavior with 
Version: 26.2.0.3 (X86_64)
Build ID: afbbd0df0edb6d40b450b0337ac646b0913a760c
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

When creating a form by wizard the form will be set to not allow any addition, modification or deletion.
This is only the first buggy behavior.
Second buggy behavior is: Changing this is impossible, because the fields for changing the behavior are disabled.

This bug won't appear in older versions like LO 25.8.4.2, so it's a regression.
Comment 3 Saburo 2026-02-18 08:23:38 UTC
I have a form created in 25.8.4.2.
If I open it in 26.2.0.3, the form works.
However, if I edit the form in 26.2.0.3, I can no longer fill out the form.

bibisected with win64-26.2
commit 57352dce995c98d1282484d02c38ed2132b091f5
author	Deepanshu Sharma
tdf#56676 disable form properties when they are not available for change
***
adding CC: Deepanshu Sharma
please, take a look?
Comment 4 Robert Großkopf 2026-02-18 09:12:57 UTC
(In reply to Saburo from comment #3)
> 
> bibisected with win64-26.2
> commit 57352dce995c98d1282484d02c38ed2132b091f5
> author	Deepanshu Sharma
> tdf#56676 disable form properties when they are not available for change

Ah, I see: The current behavior should be the behavior when connecting to Calc or Writer as datasource, because Calc and Writer tables couldn't be updated through Base.

But: Nearly all other datasources would allow update, insert and delete. And creating such a for is impossible now…
Comment 5 Commit Notification 2026-02-20 10:25:13 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/4a3c49a26667f33bc25d309814181a2a478e48ac

tdf#170839: Revert "tdf#56676 disable form properties when they are not available for change"

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2026-02-20 10:57:47 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-26-2-1":

https://git.libreoffice.org/core/commit/b694178bd7d996eef834892f103610e8d808b1fb

tdf#170839: Revert "tdf#56676 disable form properties when they are not available for change"

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2026-02-20 12:32:48 UTC
*** Bug 170912 has been marked as a duplicate of this bug. ***
Comment 8 Xisco Faulí 2026-02-20 15:39:40 UTC
The problematic commit has been reverted in master, libreoffice-26-2 and libreoffice-26-2-1.
Closing
Comment 9 Commit Notification 2026-02-20 15:39:54 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17b15a7f6f70aedf9a8f1c2e764b82c61004f6d0

tdf#170839: Revert "tdf#56676 disable form properties when they are not available for change"

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2026-03-01 17:48:28 UTC
*** Bug 171090 has been marked as a duplicate of this bug. ***