tdf#170839: Revert "tdf#56676 disable form properties when they are not available for change"

This reverts commit 57352dce995c98d1282484d02c38ed2132b091f5.

Reason for revert: it affects all kind of databases

Change-Id: Ie852752da413553ef03ab15a0ab75ff156b5b3cf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199789
Tested-by: Jenkins
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>